<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.DashActivity"
    android:stretchColumns="0,1"
    android:padding="@dimen/tlDashMargin">

    <TableRow
        android:layout_weight="1">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Inbentory"
            android:background="@drawable/round_corner"
            android:layout_margin="@dimen/btDash"/>

        <Button
            android:id="@+id/btDependency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Dependecias"
            android:background="@drawable/round_corner"
            android:layout_margin="@dimen/btDash" />
    </TableRow>
    <TableRow
        android:layout_weight="1">
        <Button
            android:id="@+id/btSectores"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sectores"
            android:background="@drawable/round_corner"
            android:layout_margin="@dimen/btDash" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/productos"
            android:background="@drawable/round_corner"
            android:layout_margin="@dimen/btDash" />
    </TableRow>
    <TableRow
        android:layout_weight="1">
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/perfil"
            android:background="@drawable/round_corner"
            android:layout_margin="@dimen/btDash" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ajustes"
            android:background="@drawable/round_corner"
            android:layout_margin="@dimen/btDash" />
    </TableRow>

</TableLayout>
