<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/f_secion_manage_lt"
            android:layout_marginRight="@dimen/f_secion_manage_lt"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/f_secion_manage_marginTop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f_secion_manage_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilShortName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/f_secion_manage_marginTop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedShortName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f_secion_manage_shortName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvDependencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/f_secion_manage_marginTop"
                android:text="@string/f_secion_manage_dependencia" />

            <Spinner
                android:id="@+id/spDependencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/f_secion_manage_marginTop" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/f_secion_manage_marginTop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f_secion_manage_descripcion" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/f_secion_manage_marginTop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f_secion_manage_img" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fadSalveDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_save_black_24dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/f_secion_manage_marginTop"/>

</FrameLayout>